2006-12-01  Chris Dunlap  <cdunlap@llnl.gov>

	* doc/credential_v3_format.txt: Added comment specifying encryption
	  uses PKCS #5 padding.

2006-11-23  Chris Dunlap  <cdunlap@llnl.gov>

	* BUGS, TODO: Updated.

2006-11-22  Chris Dunlap  <cdunlap@llnl.gov>

	* NEWS: Tweaked wording of 0.5.6 release notes.

	* : Released 0.5.6.

	* HISTORY, META, NEWS: Updated for 0.5.6 release.

	* src/munged/auth_recv.h, src/munged/conf.h, src/munged/crypto.h,
	  src/munged/thread.h: Tweaked formatting.

	* src/munged/cred.h: Removed evp.h include to fix bug causing build
	  using Libgcrypt to fail without OpenSSL headers.

2006-11-14  Chris Dunlap  <cdunlap@llnl.gov>

	* : Released 0.5.5.

	* BUGS, HISTORY, META, NEWS, PLATFORMS: Updated for 0.5.5 release.

	* src/libmunge/munge.h: Tweaked comments.

	* src/munged/cipher.c (HAVE_OPENSSL:_cipher_map_enum),
	  src/libmunge/enum.c: Made AES-256 support dependent upon SHA-256
	  since the 256-bit cipher key length can currently only be satisfied
	  by a 256-bit message digest.

2006-11-13  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/cipher.c (HAVE_LIBGCRYPT:_cipher_final): Changed so
	  memcpy() of decrypted plaintext only occurs if data exists after
	  PKCS #5 block padding has been removed.

	* src/munged/cipher.c, src/munged/mac.c, src/munged/md.c:
	  Added log_msg()s at LOG_DEBUG to investigate infrequent "Unable to
	  encrypt credential" errors when using the blowfish cipher with
	  Libgcrypt.  The bug is generated by gcry_cipher_setkey() returning a
	  "Weak encryption key" error string.  Googling around turns up a post
	  by Christian Grothoff saying "This is a (forgotten) problem with
	  libgcrypt.  The crypto library insists on checking that the key for
	  the blowfish cypher is 'secure'."  Krista Bennett then reports that
	  "The libgcrypt weak encryption key bug has been fixed in CVS."

	* config/x_ac_path_openssl.m4:
	  Added /usr/sfw to _x_ac_path_openssl_dirs for Solaris.
