@@ -98,8 +98,8 @@ user ID of that process is a member.
 .TP
 .BI "-t, --ttl " integer
 Specify the time-to-live (in seconds).  This controls how long the credential
-is valid once it has been encoded.  A value of 0 selects the default ttl.
-A value of \-1 selects the maximum allowed ttl.
+is valid once it has been encoded.  A value of 0 selects the default TTL.
+A value of \-1 selects the maximum allowed TTL.
 .TP
 .BI "-S, --socket " string
 Specify the local domain socket for connecting with \fBmunged\fR.
